--- a/mb_transaction_module/pom.xml
+++ b/mb_transaction_module/pom.xml
@@ -13,13 +13,21 @@
   <build>
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
+      <resources>
+          <resource>
+              <directory>src</directory>
+              <includes>
+                  <include>**/*.*</include>
+              </includes>
+          </resource>
+      </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source/>
-          <target/>
+            <source>1.8</source>
+            <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
