--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,51 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.project
+.settings/org.eclipse.m2e.core.prefs
+mb_account_module/.classpath
+mb_account_module/.gitignore
+mb_account_module/.project
+mb_account_module/.settings/org.eclipse.jdt.core.prefs
+mb_account_module/.settings/org.eclipse.m2e.core.prefs
+mb_account_module/.settings/org.eclipse.wst.common.component
+mb_account_module/.settings/org.eclipse.wst.common.project.facet.core.xml
+mb_transaction_module/.classpath
+mb_transaction_module/.gitignore
+mb_transaction_module/.project
+mb_transaction_module/.settings/org.eclipse.jdt.core.prefs
+mb_transaction_module/.settings/org.eclipse.m2e.core.prefs
+mb_transaction_module/.settings/org.eclipse.wst.common.component
+mb_transaction_module/.settings/org.eclipse.wst.common.project.facet.core.xml
+mb_web/.classpath
+mb_web/.gitignore
+mb_web/.project
+mb_web/.settings/.jsdtscope
+mb_web/.settings/org.eclipse.jdt.core.prefs
+mb_web/.settings/org.eclipse.m2e.core.prefs
+mb_web/.settings/org.eclipse.wst.common.component
+mb_web/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+mb_web/.settings/org.eclipse.wst.common.project.facet.core.xml
+mb_web/.settings/org.eclipse.wst.jsdt.ui.superType.container
+mb_web/.settings/org.eclipse.wst.jsdt.ui.superType.name
+mb_web/.settings/org.eclipse.wst.validation.prefs
+mb_transaction_module/mb_transaction_module.iml
+mb_transaction_module/.settings/org.eclipse.wst.validation.prefs
+.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3.xml
+.idea/libraries/Maven__junit_junit_4_12.xml
+.idea/libraries/Maven__com_sun_mail_javax_mail_1_5_0.xml
+.idea/compiler.xml
+mb_account_module/mb_account_module.iml
+mb_account_module/.settings/org.eclipse.wst.validation.prefs
+.idea/vcs.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/libraries/Maven__org_mockito_mockito_all_1_10_19.xml
+.idea/artifacts/mb_web_war_exploded.xml
+.idea/.name
+mb.iml
+.idea/workspace.xml
+.idea/libraries/Maven__javax_javaee_api_7_0.xml
+.idea/libraries/Maven__javax_activation_activation_1_1.xml
+.idea/artifacts/mb_web_war.xml
+mb_web/mb_web.iml
