--- a/mb_transaction_module/pom.xml
+++ b/mb_transaction_module/pom.xml
@@ -40,10 +40,10 @@
 	</dependency>
 	
 	<dependency>
-	    <groupId>org.mockito</groupId>
-	    <artifactId>mockito-all</artifactId>
-	    <version>1.10.19</version>
-	    <scope>test</scope>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>2.16.0</version>
+        <scope>test</scope>
 	</dependency>
 	<dependency>
 	    <groupId>junit</groupId>
