--- a/mb_transaction_module/pom.xml
+++ b/mb_transaction_module/pom.xml
@@ -1,55 +1,47 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>cz.ucl.jee.mybank</groupId>
-  <artifactId>mb_transaction_module</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  
-  <parent>
-  	<groupId>cz.ucl.jee.mybank</groupId>
-  	<artifactId>mb</artifactId>
-  	<version>1.0-SNAPSHOT</version>
-  </parent>
-  
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-      <resources>
-          <resource>
-              <directory>src</directory>
-              <includes>
-                  <include>**/*.*</include>
-              </includes>
-          </resource>
-      </resources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-   <dependencies>
-	<dependency>
-	  	<groupId>cz.ucl.jee.mybank</groupId>
-	  	<artifactId>mb_account_module</artifactId>
-	  	<version>2.1-SNAPSHOT</version>	  
-	</dependency>
-	
-	<dependency>
-	    <groupId>org.mockito</groupId>
-	    <artifactId>mockito-all</artifactId>
-	    <version>1.10.19</version>
-	    <scope>test</scope>
-	</dependency>
-	<dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <version>4.12</version>
-	    <scope>test</scope>
-	</dependency>
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>cz.ucl.jee.mybank</groupId>
+    <artifactId>mb_transaction_module</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>cz.ucl.jee.mybank</groupId>
+        <artifactId>mb</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>cz.ucl.jee.mybank</groupId>
+            <artifactId>mb_account_module</artifactId>
+            <version>2.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
