--- a/mb_account_module/pom.xml
+++ b/mb_account_module/pom.xml
@@ -6,7 +6,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -14,6 +14,10 @@
       </plugin>
     </plugins>
   </build>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   
   <parent>
   	<groupId>cz.ucl.jee.mybank</groupId>
